Fix layout issue in Comparison modal

--- a/src/ggrc/assets/stylesheets/modules/_modal.scss
+++ b/src/ggrc/assets/stylesheets/modules/_modal.scss
@@ -718,7 +718,7 @@
      .info{
        border: 1px solid $warmGray;
        padding: 20px 15px;
-       width: 50%;
+       width: calc(50% - 30px);
        box-shadow: none;
        &:first-child{
          border-right: none;
@@ -749,6 +749,8 @@
          }
        }
        & ~ .info{
+         width: calc(50% - 30px);
+
          .diff-highlighted{
            background-color: $pastelGreen;
          }
